--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flask = "*"
 flask-restful = "*"
 flask-sqlalchemy = "*"
 psycopg2 = "*"
+flask-migrate = "*"
 
 [requires]
 python_version = "3.7"
