--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ flask-restful = "*"
 flask-sqlalchemy = "*"
 psycopg2 = "*"
 flask-migrate = "*"
+uwsgi = "*"
 
 [requires]
 python_version = "3.7"
