--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
-Flask
-Flask-RESTful
-Flask-SQLAlchemy
-Flask-Migrate
-uwsgi
-psycopg2
+-i https://pypi.org/simple
+alembic==1.4.2
+aniso8601==8.0.0
+click==7.1.2
+flask-migrate==2.5.3
+flask-restful==0.3.8
+flask-sqlalchemy==2.4.3
+flask==1.1.2
+itsdangerous==1.1.0
+jinja2==2.11.2
+mako==1.1.3
+markupsafe==1.1.1
+psycopg2==2.8.5
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2020.1
+six==1.15.0
+sqlalchemy==1.3.17
+uwsgi==2.0.18
+werkzeug==1.0.1
